# tryumph

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs
src/strategy/: exponential.rs  fibonacci.rs  fixed.rs  mod.rs  nodelay.rs  random.rs
src/sync/: mod.rs
src/unsync/: mod.rs
